# Projet_long_n7_2019

./: ProductConfiguration.config  Statistic.txt  launch.sh
V-Rep/: AUTO_SAVED_INSTANCE_1.ttt  AUTO_SAVED_INSTANCE_2.ttt  AUTO_SAVED_INSTANCE_3.ttt  LGPL V2.1.txt  credits.txt  remoteApiConnections.txt  rosBubbleRob  vrepAddOnFunc_addOnFunctionDemo.lua  vrepAddOnFunc_minimalisticExporter.lua  vrepAddOnFunc_minimalisticImporter.lua  vrepAddOnScript-addOnScriptDemo.lua
V-Rep/helpFiles/: wb_search.txt  wb_tree.html
V-Rep/helpFiles/en/: accessingGeneralObjects.htm  acknowledgments.htm  addOns.htm  apiConstants.htm  apiFunctionListAlphabetical.htm  apiFunctionListCategory.htm  apiFunctions.htm  apiOverview.htm  apisOverview.htm  aviRecorder.htm  bubbleRobTutorial.htm  buildingAModelTutorial.htm  calculationModuleDialog.htm  calculationModules.htm  callbackScripts.htm  cameraPropertiesDialog.htm  childScripts.htm  collidableObjects.htm  collisionDetection.htm  commandLine.htm  commonPropertiesDialog.htm  compilingVrep.htm  contactCallbackScript.htm  convexDecomposition.htm  conveyorBeltTutorial.htm  coordinateDialog.htm  customUserInterfaceEditMode.htm  customUserInterfacePropertiesDialog.htm  customUserInterfaces.htm  customizationScripts.htm  cuttableObjects.htm  dataStreamTypes.htm  designingDynamicSimulations.htm  detectableObjects.htm  distanceCalculation.htm  dummies.htm  dummiesDescription.htm  dummyPropertiesDialog.htm  dynamicsEngineDialog.htm  dynamicsModule.htm  (+105 more)
V-Rep/models/: v_repModelThumbnails.ttmt
V-Rep/models/components/: v_repModelThumbnails.ttmt
V-Rep/models/equipment/: v_repModelThumbnails.ttmt
V-Rep/models/examples/: v_repModelThumbnails.ttmt
V-Rep/models/furniture/: v_repModelThumbnails.ttmt
V-Rep/models/infrastructure/: v_repModelThumbnails.ttmt
V-Rep/models/montrac/: shuttleA.ttm  shuttleB.ttm  shuttleC.ttm  shuttleD.ttm  shuttleE.ttm  shuttleF.ttm  shuttleZ.ttm
V-Rep/models/nature/: v_repModelThumbnails.ttmt
V-Rep/models/other/: timing info.ttm  v_repModelThumbnails.ttmt
V-Rep/models/people/: v_repModelThumbnails.ttmt
V-Rep/models/robots/: v_repModelThumbnails.ttmt
V-Rep/models/tools/: normal vector measurement tool.ttm  point-point distance tool.ttm  v_repModelThumbnails.ttmt
V-Rep/models/vehicles/: v_repModelThumbnails.ttmt
V-Rep/programming/bubbleRobClient/: bubbleRobClient.cpp  bubbleRobClient.pro  bubbleRobClient.vcproj  bubbleRobClient.vcxproj
V-Rep/programming/bubbleRobServer/: bubbleRobServer.cpp  bubbleRobServer.pro  bubbleRobServer.vcproj  bubbleRobServer.vcxproj  makefile
V-Rep/programming/externalIk/: 3DObject.cpp  3DObject.h  3Vector.cpp  3Vector.h  3X3Matrix.cpp  3X3Matrix.h  4Vector.cpp  4Vector.h  4X4FullMatrix.cpp  4X4FullMatrix.h  4X4Matrix.cpp  4X4Matrix.h  6Vector.cpp  6Vector.h  6X6Matrix.cpp  6X6Matrix.h  7Vector.cpp  7Vector.h  Ct.cpp  Ct.h  Dummy.cpp  Dummy.h  Global.h  MMatrix.cpp  MMatrix.h  MainCont.cpp  MainCont.h  MyMath.cpp  MyMath.h  ObjCont.cpp  ObjCont.h  Registerediks.cpp  Registerediks.h  Tt.cpp  Tt.h  VPoint.h  Vector.cpp  Vector.h  extIk.cpp  extIk.h  (+11 more)
V-Rep/programming/externalIkDemo1/: externalIkDemo1.cpp  externalIkDemo1.pro  externalIkDemo1.vcproj  externalIkDemo1.vcxproj  makefile
V-Rep/programming/externalIkDemo2/: externalIkDemo2.cpp  externalIkDemo2.pro  externalIkDemo2.vcproj  externalIkDemo2.vcxproj  makefile
V-Rep/programming/include/: extApiCustomConst.h  v_repLib.h
V-Rep/programming/mtbServer/: makefile  (+6 more)
V-Rep/scenes/: 3DoFHolonomicPathPlanning.ttt  6DoFHolonomicPathPlanning.ttt  controlTypeExamples.ttt  motionPlanningAndGraspingDemo.ttt  motionPlanningDemo1.ttt  remoteApiCommandServerExample.ttt  robot3.ttt  ur5WithRg2Grasping.ttt  workspace.ttt
V-Rep/system/: defaultContactCallbackScript.txt  defaultCustomizationScript.txt  defaultGeneralCallbackScript.txt  defaultJointCtrlCallbackScript.txt  dltcscpt.txt  dltmscpt.txt  dlttscpt.txt  usrset.txt
ros_ws/devel/: .catkin  .rosinstall  setup.sh
ros_ws/src/aiguillages/: CMakeLists.txt  package.xml
ros_ws/src/aiguillages/src/: A1.cpp  A1.h  A10.cpp  A10.h  A11.cpp  A11.h  A12.cpp  A12.h  A2.cpp  A2.h  A3.cpp  A3.h  Sh.cpp  Sh.h  aiguillage_1.cpp  aiguillage_10.cpp  aiguillage_11.cpp  aiguillage_12.cpp  aiguillage_2.cpp  aiguillage_3.cpp
ros_ws/src/commande_locale/: CMakeLists.txt  package.xml
ros_ws/src/commande_locale/src/: UI.cpp  UI.h  commande_locale.cpp  configuration.cpp  configuration.h  inOutController.cpp  inOutController.h  product.h  vrepController.cpp  vrepController.h
ros_ws/src/postes/: CMakeLists.txt  package.xml
ros_ws/src/postes/src/: Poste1.cpp  Poste1.cpp~  Poste1.h  Poste2.cpp  Poste2.h  Poste3.cpp  Poste3.h  Poste4.cpp  Poste4.h  main_poste1.cpp  main_poste2.cpp  main_poste3.cpp  main_poste4.cpp  productPost.cpp
ros_ws/src/robots/: CMakeLists.txt  package.xml
ros_ws/src/robots/msg/: MoveRobot.msg  RobotJoints.msg
ros_ws/src/robots/src/: main_robot1.cpp  main_robot2.cpp  main_robot3.cpp  main_robot4.cpp  robot1.cpp  robot1.h  robot2.cpp  robot2.h  robot3.cpp  robot3.h  robot4.cpp  robot4.h
ros_ws/src/scheduling/: CMakeLists.txt  package.xml
ros_ws/src/scheduling/msg/: Msg_LoadShuttle.msg
ros_ws/src/scheduling/src/: mainScheduling.cpp  product.cpp  scheduler.cpp  scheduler.h
ros_ws/src/shuttles/: CMakeLists.txt
ros_ws/src/shuttles/src/: mainCommandeShuttle.cpp  shuttle.cpp  shuttle.h  shuttleManager.cpp  shuttleManager.h
ros_ws/src/shuttles/srv/: srvGetEmptyShuttles.srv  srvGetShuttleStatus.srv
ros_ws/src/taches/: CMakeLists.txt
ros_ws/src/taches/launch/: tachesDroite.launch  tachesGauche.launch
ros_ws/src/taches/src/: main_tache1.cpp  main_tache2.cpp  main_tache3.cpp  main_tache4.cpp  main_tache5.cpp  main_tache6.cpp  main_tache7.cpp  main_tache8.cpp  productTache.cpp  productTache.h  tache1.cpp  tache1.cpp~  tache1.h  tache1.h~  tache2.cpp  tache2.h  tache3.cpp  tache3.h  tache4.cpp  tache4.h  tache5.cpp  tache5.h  tache6.cpp  tache6.h  tache7.cpp  tache7.h  tache8.cpp  tache8.h
sim/: Simulation.ttt  SimulationComplete.ttt  SimulationDroite.ttt  SimulationGauche.ttt
(+727 files in other folders)
