<package>
  <name>postes</name>
  <description>postes node</description>
  <maintainer email="projetlongAIP@gmail.com">Projet long ENSEEIHT</maintainer>

  <version>0.0.0</version>
  <author>Delage, Maurin</author>
  <license>GPLv3</license>
  <url>http://www.fr</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vrep_common</build_depend>
  <build_depend>shuttles</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>aiguillages</build_depend>
  <build_depend>commande_locale</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
